<resources>
    <string name="app_name">UTB_ANDROID_PROJECT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Pick practice</string>
    <string name="second_fragment_label">Practice settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="number_of_rounds">Number of rounds</string>
    <string name="number_of_breaths">Number of breaths</string>
    <string name="seconds_to_hold">Seconds to hold</string>
    <string name="checkedtextview">CheckedTextView</string>
    <string name="estimated_intensity">Estimated intensity</string>
    <string name="back_to_all_settings">Back to all settings</string>
</resources>